# Swapeme

./: Cargo.toml  README.md
crates/wallpaper_engine_cli_wrapper/: Cargo.toml
crates/wallpaper_engine_cli_wrapper/src/: error.rs  lib.rs  test.rs
resources/: theme.swapeme.schema.json
resources/test/: cat.swapeme.json  stars.swapeme.json  test.swapeme.json
src/: cli.rs  color.rs  error.rs  main.rs  test.rs  theme.rs
src/error/: mod.rs  wallpaper_engine.rs
src/theme/: mod.rs  wallpaper_engine.rs
src/theme/spicetify/: error.rs  mod.rs
src/theme/wallpaper_engine/: config.rs  error.rs  mod.rs
src/theme/windows/: color_scheme.rs  mod.rs  wallpaper.rs
