[package]
name = "swapeme"
version = "0.1.0"
edition = "2024"
authors = ["Adrien5902"]
description = "Swap windows themes"

[dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
schemars = "0.9.0"
clap = "4.5.40"
dialoguer = "0.11.0"
colored = "3.0.0"
vdf-parser = "0.1.8"
dirs = "6.0.0"
winreg = "0.55.0"
serde_variant = "0.1.3"
reqwest = { version = "0.12.20", features = ["blocking"] }
zip = "4.1.0"

[build-dependencies]
schemars = "0.9.0"
serde_json = "1.0.140"
